--- a/src/app/pages/dte/audience/dialog/dialog-panel-blast/dialog-panel-blast.component.html
+++ b/src/app/pages/dte/audience/dialog/dialog-panel-blast/dialog-panel-blast.component.html
@@ -8,7 +8,7 @@
         type="button"
         (click)="export()"
       >
-        <mat-icon>arrow_upward</mat-icon> Export Template
+        <mat-icon>arrow_upward</mat-icon> {{'manajemen_barang_sku.manajemen_koin.text8' | translate}}
       </button>
     </div>
     <!-- CLOSE DIALOG BUTTON -->
@@ -24,19 +24,19 @@
       [reorderable]="reorderable" [selectionType]="'checkbox'" [count]="pagination.total"
       [limit]="pagination.per_page" [externalPaging]="true" [externalSorting]="true" (page)="setPage($event)">
 
-      <ngx-datatable-column name="Retailer_id" prop="retailer_id"></ngx-datatable-column>
+      <ngx-datatable-column name="{{'dte.approval_coin_adjustment.retailer_id' | translate}}" prop="retailer_id"></ngx-datatable-column>
 
-      <ngx-datatable-column name="Copywrites" prop="copywrites"></ngx-datatable-column>
+      <ngx-datatable-column name="{{'dte.template_tugas.copywriting' | translate}}" prop="copywrites"></ngx-datatable-column>
 
-      <ngx-datatable-column name="Blasted Time" prop="blasted_time">
+      <ngx-datatable-column name="{{'dte.audience.blasted_time' | translate}}" prop="blasted_time">
         <ng-template ngx-datatable-cell-template let-row="row" let-value="value">
           {{ row.blasted_time }}
         </ng-template>
       </ngx-datatable-column>
 
-      <ngx-datatable-column name="Coin Submission" prop="coin_submission"></ngx-datatable-column>
-      <ngx-datatable-column name="Coin Verification" prop="coin_verification"></ngx-datatable-column>
-      <ngx-datatable-column name="Error Validation" prop="error_validation"></ngx-datatable-column>
+      <ngx-datatable-column name="{{'dte.task_sequencing.text35' | translate}}" prop="coin_submission"></ngx-datatable-column>
+      <ngx-datatable-column name="{{'dte.task_sequencing.text36' | translate}}" prop="coin_verification"></ngx-datatable-column>
+      <ngx-datatable-column name="{{'dte.audience.error_validation' | translate}}" prop="error_validation"></ngx-datatable-column>
     </ngx-datatable>
   </div>
   <a #downloadLink></a>
